# task1

./: .gitignore  Makefile  README.md  docker-compose.yml  schema-management.md
data-generator/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data-generator/docs/: data-generator-explained.html
data-generator/src/hospital_datagen/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  factory.py  logging_config.py  orchestrator.py
data-generator/src/hospital_datagen/db/: __init__.py  connection.py  repositories.py
data-generator/src/hospital_datagen/generators/: __init__.py  appointment.py  base.py  department.py  doctor.py  medication.py  patient.py  pools.py  prescription.py  prescription_item.py  specialty.py  uniqueness.py
data-generator/src/hospital_datagen/models/: __init__.py  appointment.py  base.py  department.py  doctor.py  medication.py  patient.py  prescription.py  prescription_item.py  specialty.py
data-generator/tests/: conftest.py
data-generator/tests/integration/: conftest.py  test_end_to_end.py  test_repositories.py
data-generator/tests/unit/: test_config.py  test_generators.py  test_models.py  test_orchestrator.py  test_uniqueness.py
flyway/conf/: ecommerce.conf  hospital.conf  library.conf
flyway/sql/ecommerce/: R__order_totals_view.sql  V1__create_core_tables.sql  V2__add_payments.sql  V3__seed_reference_data.sql
flyway/sql/hospital/: R__active_appointments_view.sql  V1__create_core_tables.sql  V2__add_prescriptions.sql  V3__seed_reference_data.sql
init/: 01-create-databases.sql
liquibase/changelog/ecommerce/: db.changelog-master.yaml  v1__create_core_tables.yaml  v2__add_payments.yaml  v3__seed_reference_data.yaml  v4__add_order_discount.yaml
liquibase/changelog/hospital/: db.changelog-master.yaml  v1__create_core_tables.yaml  v2__add_prescriptions.yaml  v3__seed_reference_data.yaml  v4__add_appointment_billing.yaml
liquibase/conf/: ecommerce.properties  hospital.properties  library.properties
